--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                             <td>1</td>
                             <td>Add Objects to CR</td>
                             <td></td>
-                            <td>IP_PHI_PS_AMP_DEVELOPER</td>
-                            <td>IPPS-A R3 AMP PS Developer</td>
+                            <td>DEVELOPER</td>
+                            <td>IPPS-A PS Developer</td>
                             <td></td>
                             <td></td>
                             <td>Developer Task</td>
@@ -113,8 +113,8 @@
                             <td>2</td>
                             <td>Add Migration Notes</td>
                             <td></td>
-                            <td>IP_PHI_PS_AMP_DEVELOPER</td>
-                            <td>IPPS-A R3 AMP PS Developer</td>
+                            <td>DEVELOPER</td>
+                            <td>IPPS-A PS Developer</td>
                             <td></td>
                             <td></td>
                             <td>Developer Task</td>
@@ -126,8 +126,8 @@
                             <td>3</td>
                             <td>Create Migration Set</td>
                             <td></td>
-                            <td>IP_PHI_PS_AMP_DEVELOPER</td>
-                            <td>IPPS-A R3 AMP PS Developer</td>
+                            <td>DEVELOPER</td>
+                            <td>IPPS-A PS Developer</td>
                             <td></td>
                             <td></td>
                             <td>Developer Task</td>
@@ -139,8 +139,8 @@
                             <td>4</td>
                             <td>Add PRE REQ to CR</td>
                             <td></td>
-                            <td>IP_PHI_PS_AMP_DEVELOPER</td>
-                            <td>IPPS-A R3 AMP PS Developer</td>
+                            <td>DEVELOPER</td>
+                            <td>IPPS-A PS Developer</td>
                             <td></td>
                             <td></td>
                             <td>Developer Task</td>
@@ -152,8 +152,8 @@
                             <td>5</td>
                             <td>Migrate to DEV</td>
                             <td></td>
-                            <td>IP_PHI_PS_AMP_DEVELOPER</td>
-                            <td>IPPS-A R3 AMP PS Developer</td>
+                            <td>DEVELOPER</td>
+                            <td>IPPS-A PS Developer</td>
                             <td></td>
                             <td></td>
                             <td>Developer Task</td>
@@ -165,8 +165,8 @@
                             <td>6</td>
                             <td>Migrate to FUT</td>
                             <td><button class="btn-complete-inline">Complete</button></td>
-                            <td>IP_PHI_PS_AMP_DEVELOPER</td>
-                            <td>IPPS-A R3 AMP PS Developer</td>
+                            <td>DEVELOPER</td>
+                            <td>IPPS-A PS Developer</td>
                             <td></td>
                             <td>HCM R3 FUT ZONE A</td>
                             <td>Developer Task</td>
@@ -178,8 +178,8 @@
                             <td>7</td>
                             <td>Validate FUT</td>
                             <td></td>
-                            <td>IP_PHI_PS_AMP_DEVELOPER</td>
-                            <td>IPPS-A R3 AMP PS Developer</td>
+                            <td>DEVELOPER</td>
+                            <td>IPPS-A PS Developer</td>
                             <td></td>
                             <td></td>
                             <td>Developer Task</td>
@@ -191,8 +191,8 @@
                             <td>8</td>
                             <td>Peer Review</td>
                             <td></td>
-                            <td>IP_PHI_PS_AMP_DEVELOPER</td>
-                            <td>IPPS-A R3 AMP PS Developer</td>
+                            <td>DEVELOPER</td>
+                            <td>IPPS-A PS Developer</td>
                             <td></td>
                             <td></td>
                             <td>Developer Task</td>
