--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
                             <td>9</td>
                             <td>Dev Lead Approval</td>
                             <td></td>
-                            <td>IP_PHI_PS_AMP_DEV_LEAD</td>
-                            <td>IPPS-A R3 AMP PS Dev Lead</td>
+                            <td>DEV_LEAD</td>
+                            <td>IPPS-A Dev Lead</td>
                             <td></td>
                             <td></td>
                             <td>Development Lead Task</td>
@@ -217,7 +217,7 @@
                             <td>10</td>
                             <td>Approve to PLT</td>
                             <td></td>
-                            <td>IP_PHI_PS_R3_TEST_LEAD</td>
+                            <td>PS TEST_LEAD</td>
                             <td>IPPS-A PeopleSoft R3 Test Lead</td>
                             <td></td>
                             <td></td>
@@ -243,7 +243,7 @@
                             <td>12</td>
                             <td>Migrate to IT TEST</td>
                             <td></td>
-                            <td>IP_PHI_PS_R3_TEST_LEAD</td>
+                            <td> PS TEST_LEAD</td>
                             <td>IPPS-A PeopleSoft R3 Test Lead</td>
                             <td></td>
                             <td>HCM R3 IT TEST</td>
