--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                             <td>11</td>
                             <td>Migrate to PLT</td>
                             <td></td>
-                            <td>IP_PHI_PS_R3_TEST_LEAD</td>
+                            <td>PS TEST_LEAD</td>
                             <td>IPPS-A PeopleSoft R3 Test Lead</td>
                             <td></td>
                             <td class="invalid-value">(Invalid Value)</td>
@@ -244,7 +244,7 @@
                             <td>Migrate to IT TEST</td>
                             <td></td>
                             <td> PS TEST_LEAD</td>
-                            <td>IPPS-A PeopleSoft R3 Test Lead</td>
+                            <td>IPPS-A PeopleSoft Test Lead</td>
                             <td></td>
                             <td>HCM R3 IT TEST</td>
                             <td>Test Lead Task</td>
