--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             <td>Approve to PLT</td>
                             <td></td>
                             <td>PS TEST_LEAD</td>
-                            <td>IPPS-A PeopleSoft R3 Test Lead</td>
+                            <td>IPPS-A PeopleSoft Test Lead</td>
                             <td></td>
                             <td></td>
                             <td>Test Lead Task</td>
@@ -231,7 +231,7 @@
                             <td>Migrate to PLT</td>
                             <td></td>
                             <td>PS TEST_LEAD</td>
-                            <td>IPPS-A PeopleSoft R3 Test Lead</td>
+                            <td>IPPS-A PeopleSoft Test Lead</td>
                             <td></td>
                             <td class="invalid-value">(Invalid Value)</td>
                             <td>Test Lead Task</td>
