--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="cr-details">
       <div class="cr-info">
-        <strong>CR Number:</strong> HCM-0007238
+        <strong>CR Number:</strong> HCM-0007334
       </div>
       <div class="cr-actions">
         <button type="button" class="btn-action" id="cancelBtn">Cancel</button>
@@ -232,6 +232,8 @@
 
   <div class="text-end mt-3">
     <button id="globalCompleteBtn" class="btn btn-primary d-none">Complete</button>
+    <button id="resetProgressBtn" class="btn btn-secondary">Reset</button>
+
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
