--- a/public/index.html
+++ b/public/index.html
@@ -158,11 +158,11 @@
                 <td>7</td>
                 <td>Validate FUT</td>
                 <td class="task-action-cell"></td>
-                <td>DEVELOPER</td>
-                <td>IPPS-A PS Developer</td>
+                <td>IPPS-A PeopleSoft Test Lead</td>
+                <td>IPPS-A Test</td>
                 <td>FUT</td>
                 <td>HCM R3 FUT ZONE A</td>
-                <td>Developer Task</td>
+                <td>Test Validation</td>
             </tr>
             <tr class="task-row" data-task-id="8" data-status="pending">
                 <td><input type="checkbox"></td>
@@ -240,3 +240,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
